--- a/contents/pages/104.html.md
+++ b/contents/pages/104.html.md
@@ -11,7 +11,7 @@ number: 104
 ### ACCESS
 〒470-0392 愛知県豊田市八草町八千草1247 愛知工業大学 14号館515号室 (梶) 14号館514号室 (学生)
 
-<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d572.1361921860762!2d137.11107645820903!3d35.18443013182619!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sja!2sjp!4v1713852474822!5m2!1sja!2sjp" width="600" height="350" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>	
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d572.1361921860762!2d137.11107645820903!3d35.18443013182619!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sja!2sjp!4v1713852474822!5m2!1sja!2sjp" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>	
 
 <br>
 
