--- a/contents/posts/7479.html.md
+++ b/contents/posts/7479.html.md
@@ -21,11 +21,11 @@ number: 7479
 
 <div class="img-container">
     <ul class="slider">
-        <li><a href="/hpg/img/2016/09/2016-08-30-15.32.15.jpg" data-lightbox="2016-09-09_1"><img src="/hpg/img/thumbnail/2016/09/2016-08-30-15.32.15.jpg" loading='lazy' /></a></li>
-        <li><a href="/hpg/img/2016/09/image3.jpg" data-lightbox="2016-09-09_1"><img src="/hpg/img/thumbnail/2016/09/image3.jpg" loading='lazy' /></a></li>
-        <li><a href="/hpg/img/2016/09/2016-08-31-16.01.01.jpg" data-lightbox="2016-09-09_1"><img src="/hpg/img/thumbnail/2016/09/2016-08-31-16.01.01.jpg" loading='lazy' /></a></li>
-        <li><a href="/hpg/img/2016/09/2016-08-28-11.43.50.jpg" data-lightbox="2016-09-09_1"><img src="/hpg/img/thumbnail/2016/09/2016-08-28-11.43.50.jpg" loading='lazy' /></a></li>
-        <li><a href="/hpg/img/2016/09/2016-08-28-14.06.35.jpg" data-lightbox="2016-09-09_1"><img src="/hpg/img/thumbnail/2016/09/2016-08-28-14.06.35.jpg" loading='lazy' /></a></li>
-        <li><a href="/hpg/img/2016/09/2016-08-31-16.36.28.jpg" data-lightbox="2016-09-09_1"><img src="/hpg/img/thumbnail/2016/09/2016-08-31-16.36.28.jpg" loading='lazy' /></a></li>
+        <li><a href="/hpg/img/2016/09/2016-08-30-15.32.15.jpg" data-lightbox="2016-09-09_1"><img src="/hpg/img/thumbnail/2016/09/2016-08-30-15.32.15.jpg"  /></a></li>
+        <li><a href="/hpg/img/2016/09/image3.jpg" data-lightbox="2016-09-09_1"><img src="/hpg/img/thumbnail/2016/09/image3.jpg"  /></a></li>
+        <li><a href="/hpg/img/2016/09/2016-08-31-16.01.01.jpg" data-lightbox="2016-09-09_1"><img src="/hpg/img/thumbnail/2016/09/2016-08-31-16.01.01.jpg"  /></a></li>
+        <li><a href="/hpg/img/2016/09/2016-08-28-11.43.50.jpg" data-lightbox="2016-09-09_1"><img src="/hpg/img/thumbnail/2016/09/2016-08-28-11.43.50.jpg"  /></a></li>
+        <li><a href="/hpg/img/2016/09/2016-08-28-14.06.35.jpg" data-lightbox="2016-09-09_1"><img src="/hpg/img/thumbnail/2016/09/2016-08-28-14.06.35.jpg"  /></a></li>
+        <li><a href="/hpg/img/2016/09/2016-08-31-16.36.28.jpg" data-lightbox="2016-09-09_1"><img src="/hpg/img/thumbnail/2016/09/2016-08-31-16.36.28.jpg"  /></a></li>
     </ul>
 </div>
