--- a/contents/posts/7481.html.md
+++ b/contents/posts/7481.html.md
@@ -25,7 +25,7 @@ number: 7481
 
 <div class="img-container">
     <ul class="slider">
-        <li><a href="/hpg/img/2016/09/Slack-for-iOS-Upload-1.jpg" data-lightbox="2016-09-21"><img src="/hpg/img/thumbnail/2016/09/Slack-for-iOS-Upload-1.jpg" loading='lazy' /></a></li>
-        <li><a href="/hpg/img/2016/09/S__54263810.jpg" data-lightbox="2016-09-21"><img src="/hpg/img/thumbnail/2016/09/S__54263810.jpg" loading='lazy' /></a></li>
+        <li><a href="/hpg/img/2016/09/Slack-for-iOS-Upload-1.jpg" data-lightbox="2016-09-21"><img src="/hpg/img/thumbnail/2016/09/Slack-for-iOS-Upload-1.jpg"  /></a></li>
+        <li><a href="/hpg/img/2016/09/S__54263810.jpg" data-lightbox="2016-09-21"><img src="/hpg/img/thumbnail/2016/09/S__54263810.jpg"  /></a></li>
     </ul>
 </div>
