--- a/contents/posts/7488.html.md
+++ b/contents/posts/7488.html.md
@@ -25,9 +25,9 @@ number: 7488
 
 <div class="img-container">
     <ul class="slider">
-        <li><a href="/hpg/img/2016/11/IMG_9264.jpg" data-lightbox="2016-11-30"><img src="/hpg/img/thumbnail/2016/11/IMG_9264.jpg" loading='lazy' /></a></li>
-        <li><a href="/hpg/img/2016/11/yoshino-musical2016.jpg" data-lightbox="2016-11-30"><img src="/hpg/img/thumbnail/2016/11/yoshino-musical2016.jpg" loading='lazy' /></a></li>
-        <li><a href="/hpg/img/2016/11/shots-musical2016.jpg" data-lightbox="2016-11-30"><img src="/hpg/img/thumbnail/2016/11/shots-musical2016.jpg" loading='lazy' /></a></li>
-        <li><a href="/hpg/img/2016/11/DSC_7703.jpg" data-lightbox="2016-11-30"><img src="/hpg/img/thumbnail/2016/11/DSC_7703.jpg" loading='lazy' /></a></li>
+        <li><a href="/hpg/img/2016/11/IMG_9264.jpg" data-lightbox="2016-11-30"><img src="/hpg/img/thumbnail/2016/11/IMG_9264.jpg"  /></a></li>
+        <li><a href="/hpg/img/2016/11/yoshino-musical2016.jpg" data-lightbox="2016-11-30"><img src="/hpg/img/thumbnail/2016/11/yoshino-musical2016.jpg"  /></a></li>
+        <li><a href="/hpg/img/2016/11/shots-musical2016.jpg" data-lightbox="2016-11-30"><img src="/hpg/img/thumbnail/2016/11/shots-musical2016.jpg"  /></a></li>
+        <li><a href="/hpg/img/2016/11/DSC_7703.jpg" data-lightbox="2016-11-30"><img src="/hpg/img/thumbnail/2016/11/DSC_7703.jpg"  /></a></li>
     </ul>
 </div>
