--- a/contents/posts/7489.html.md
+++ b/contents/posts/7489.html.md
@@ -8,7 +8,7 @@ published: true
 number: 7489
 ---
 
-<a href="/hpg/img/2016/12/Slack-for-iOS-Upload-1.jpg" data-lightbox="2016-12-08"><img src="/hpg/img/thumbnail/2016/12/Slack-for-iOS-Upload-1.jpg" loading='lazy' /></a>
+<a href="/hpg/img/2016/12/Slack-for-iOS-Upload-1.jpg" data-lightbox="2016-12-08"><img src="/hpg/img/thumbnail/2016/12/Slack-for-iOS-Upload-1.jpg"  /></a>
 
 2016年12月7日に金沢市で開催された第81回MBL WiP発表にて以下の発表を行いました．
 
