--- a/contents/posts/7505.html.md
+++ b/contents/posts/7505.html.md
@@ -23,8 +23,8 @@ number: 7505
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/eb737342-d0c2-4002-990b-700d33fd83d6.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ed08aed3-83a6-4120-b585-32cd34fb9528.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/eb737342-d0c2-4002-990b-700d33fd83d6.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ed08aed3-83a6-4120-b585-32cd34fb9528.webp"  /></li>
     </ul>
 </div>
 
