--- a/contents/posts/7508.html.md
+++ b/contents/posts/7508.html.md
@@ -30,8 +30,8 @@ number: 7508
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/1e032737-c02d-465a-947b-004586a94a22.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/43d5d3ee-86fd-404a-9461-86ae05dcb6ea.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/1e032737-c02d-465a-947b-004586a94a22.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/43d5d3ee-86fd-404a-9461-86ae05dcb6ea.webp"  /></li>
     </ul>
 </div>
 
