--- a/contents/posts/7509.html.md
+++ b/contents/posts/7509.html.md
@@ -31,9 +31,9 @@ number: 7509
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ada42d1a-0065-4fae-a92a-4f803661639f.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/179421c6-7de0-4d99-8265-37e719e14f7a.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/c650d9ae-5b5e-4fe4-a931-274b2e0de882.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ada42d1a-0065-4fae-a92a-4f803661639f.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/179421c6-7de0-4d99-8265-37e719e14f7a.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/c650d9ae-5b5e-4fe4-a931-274b2e0de882.webp"  /></li>
     </ul>
 </div>
 
