--- a/contents/posts/7510.html.md
+++ b/contents/posts/7510.html.md
@@ -19,12 +19,12 @@ number: 7510
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/63e4c7ab-0ae8-4ed2-93b3-b76e9c45c7b6.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ffb8aff8-f1a9-472b-8d2c-f273b16e4a46.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/e9000ab0-3c2d-4aa9-af71-485ce853dfaf.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a59d0aef-5f6d-4f30-b455-7cf67d6e3e7e.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/99e19224-c25d-486f-b36d-f2d2db52a9d7.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d7ba1663-ce53-4163-9dcb-8b6bded3847d.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/63e4c7ab-0ae8-4ed2-93b3-b76e9c45c7b6.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ffb8aff8-f1a9-472b-8d2c-f273b16e4a46.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/e9000ab0-3c2d-4aa9-af71-485ce853dfaf.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a59d0aef-5f6d-4f30-b455-7cf67d6e3e7e.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/99e19224-c25d-486f-b36d-f2d2db52a9d7.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d7ba1663-ce53-4163-9dcb-8b6bded3847d.webp"  /></li>
     </ul>
 </div>
 
