--- a/contents/posts/7512.html.md
+++ b/contents/posts/7512.html.md
@@ -16,5 +16,5 @@ number: 7512
 就職する人，院に進学する人，夢のために進学する人といろんな人とそれぞれが新しいスタートをきってこれから頑張っていきます．
 
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/907c942d-26a8-4964-9e40-83ca359b29b6.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/907c942d-26a8-4964-9e40-83ca359b29b6.webp"  />
 
