--- a/contents/posts/7513.html.md
+++ b/contents/posts/7513.html.md
@@ -16,9 +16,9 @@ number: 7513
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ba8df064-dd17-4acb-9283-2f847844150f.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/3554e582-a944-48aa-88b8-e676b0f634bb.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/bc9a9564-b0c5-41f9-8e1d-9a87b45a3b88.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ba8df064-dd17-4acb-9283-2f847844150f.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/3554e582-a944-48aa-88b8-e676b0f634bb.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/bc9a9564-b0c5-41f9-8e1d-9a87b45a3b88.webp"  /></li>
     </ul>
 </div>
 
