--- a/contents/posts/7514.html.md
+++ b/contents/posts/7514.html.md
@@ -21,8 +21,8 @@ number: 7514
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/19d1ed37-ade2-4f33-ac9a-dd24df89cb54.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ee709a93-5581-426b-97f5-e8b61e63d43d.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/19d1ed37-ade2-4f33-ac9a-dd24df89cb54.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ee709a93-5581-426b-97f5-e8b61e63d43d.webp"  /></li>
     </ul>
 </div>
 
