--- a/contents/posts/7515.html.md
+++ b/contents/posts/7515.html.md
@@ -50,13 +50,13 @@ number: 7515
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/51ccd6bb-63bc-4592-8cdb-2661a2d3a2c4.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/87d95ace-555c-46d0-b826-97a197b4afac.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a48e6bf4-a60e-4c59-b37c-2c5412e72936.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/63530377-07f8-437c-be1d-dc5ba8c0ec7a.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/8d4bb351-0756-420f-91c2-dbe3965abf20.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/e0d5f84d-e07b-4b93-9abb-01f4303fdaaa.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/02f5becf-2d31-4ba4-9a7f-550cee38bed5.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/51ccd6bb-63bc-4592-8cdb-2661a2d3a2c4.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/87d95ace-555c-46d0-b826-97a197b4afac.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a48e6bf4-a60e-4c59-b37c-2c5412e72936.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/63530377-07f8-437c-be1d-dc5ba8c0ec7a.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/8d4bb351-0756-420f-91c2-dbe3965abf20.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/e0d5f84d-e07b-4b93-9abb-01f4303fdaaa.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/02f5becf-2d31-4ba4-9a7f-550cee38bed5.webp"  /></li>
     </ul>
 </div>
 
