--- a/contents/posts/7516.html.md
+++ b/contents/posts/7516.html.md
@@ -22,8 +22,8 @@ number: 7516
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/21b7d2e0-b498-4d5a-8861-8b631d5fdf3b.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/dd41af74-1b6a-4551-bbc2-7bf1fc242414.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/21b7d2e0-b498-4d5a-8861-8b631d5fdf3b.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/dd41af74-1b6a-4551-bbc2-7bf1fc242414.webp"  /></li>
     </ul>
 </div>
 
