--- a/contents/posts/7517.html.md
+++ b/contents/posts/7517.html.md
@@ -23,11 +23,11 @@ number: 7517
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/37510556-8162-4e17-8ae4-4dad01043047.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/32d7a99f-a148-418d-b087-86ebde747bb1.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/13559a52-1e60-4753-9688-22c5a46abeec.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d2b8a2e4-5d4e-40c9-a2c4-1c2c0e562896.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/4f74bf08-7645-4485-83c4-9c5420a62444.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/37510556-8162-4e17-8ae4-4dad01043047.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/32d7a99f-a148-418d-b087-86ebde747bb1.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/13559a52-1e60-4753-9688-22c5a46abeec.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d2b8a2e4-5d4e-40c9-a2c4-1c2c0e562896.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/4f74bf08-7645-4485-83c4-9c5420a62444.webp"  /></li>
     </ul>
 </div>
 
