--- a/contents/posts/7518.html.md
+++ b/contents/posts/7518.html.md
@@ -60,15 +60,15 @@ number: 7518
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/83dd51a2-5165-4a74-b4d6-787ed7afe2be.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/85794cb1-0439-4c49-b4b4-5a536c9d8de5.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/484c158f-e005-4030-9c75-8cad58ca6932.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a527f5a8-f81f-495f-82e2-3aaa129ebf5d.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/1bc15209-f975-4928-a5b4-29d6d41183be.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a1ff647a-d549-4731-a029-49eface76c5c.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/bc07f08e-767b-42eb-89df-bbe867e4dfeb.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/4f047591-2833-4c2f-a068-45c88b00d102.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/0fb59d2a-ce9c-4da2-8267-b6f669925046.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/83dd51a2-5165-4a74-b4d6-787ed7afe2be.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/85794cb1-0439-4c49-b4b4-5a536c9d8de5.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/484c158f-e005-4030-9c75-8cad58ca6932.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a527f5a8-f81f-495f-82e2-3aaa129ebf5d.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/1bc15209-f975-4928-a5b4-29d6d41183be.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a1ff647a-d549-4731-a029-49eface76c5c.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/bc07f08e-767b-42eb-89df-bbe867e4dfeb.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/4f047591-2833-4c2f-a068-45c88b00d102.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/0fb59d2a-ce9c-4da2-8267-b6f669925046.webp"  /></li>
     </ul>
 </div>
 
