--- a/contents/posts/7521.html.md
+++ b/contents/posts/7521.html.md
@@ -21,9 +21,9 @@ number: 7521
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/c73ddc6e-44ce-466f-962d-6ffea94af7c8.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/7f5b5fd0-9c39-4b7f-b63e-0dac2ae700b3.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/530a48a8-f6a2-4f7a-b97d-4e002fda8a70.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/c73ddc6e-44ce-466f-962d-6ffea94af7c8.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/7f5b5fd0-9c39-4b7f-b63e-0dac2ae700b3.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/530a48a8-f6a2-4f7a-b97d-4e002fda8a70.webp"  /></li>
     </ul>
 </div>
 
