--- a/contents/posts/7529.html.md
+++ b/contents/posts/7529.html.md
@@ -21,10 +21,10 @@ number: 7529
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/78882ff7-d220-4748-9895-c4cb75d672d3.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/98294f58-20b2-4876-be23-6f5a3791358a.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f9f56a95-31f4-4fc0-8a41-74d73684d3a8.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/185509eb-9ce7-479b-b414-6185b43135d8.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/78882ff7-d220-4748-9895-c4cb75d672d3.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/98294f58-20b2-4876-be23-6f5a3791358a.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f9f56a95-31f4-4fc0-8a41-74d73684d3a8.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/185509eb-9ce7-479b-b414-6185b43135d8.webp"  /></li>
     </ul>
 </div>
 
