--- a/contents/posts/7530.html.md
+++ b/contents/posts/7530.html.md
@@ -28,9 +28,9 @@ number: 7530
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a667aa66-34bb-4f60-9d34-7f138654595a.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/2c7cc52f-8174-4aaa-afb7-86876056f77b.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/e846028b-8fc7-4361-82f7-b2467ec1ee43.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a667aa66-34bb-4f60-9d34-7f138654595a.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/2c7cc52f-8174-4aaa-afb7-86876056f77b.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/e846028b-8fc7-4361-82f7-b2467ec1ee43.webp"  /></li>
     </ul>
 </div>
 
