--- a/contents/posts/7532.html.md
+++ b/contents/posts/7532.html.md
@@ -19,5 +19,5 @@ number: 7532
 伝えたいことを伝える難しさを感じました．伝え方に関しては社会人になっても努力していきます．
 発表以外では今までの学会で会ってきた方々にお会いし話ができ面白かったです．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/b34a8488-129a-4035-9c05-4d577702cc1e.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/b34a8488-129a-4035-9c05-4d577702cc1e.webp"  />
 
