--- a/contents/posts/7533.html.md
+++ b/contents/posts/7533.html.md
@@ -22,10 +22,10 @@ number: 7533
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/155f2d9e-7fd0-40ec-aafa-7043002d4eb8.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/1d0d344b-29a1-45c8-99d2-67fbb4014a99.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f59bf29e-da81-49dc-9134-d6698e3e9c73.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/71ca33c1-13f2-40a6-82d0-74ac6a13e2d1.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/155f2d9e-7fd0-40ec-aafa-7043002d4eb8.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/1d0d344b-29a1-45c8-99d2-67fbb4014a99.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f59bf29e-da81-49dc-9134-d6698e3e9c73.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/71ca33c1-13f2-40a6-82d0-74ac6a13e2d1.webp"  /></li>
     </ul>
 </div>
 
