--- a/contents/posts/7537.html.md
+++ b/contents/posts/7537.html.md
@@ -14,7 +14,7 @@ number: 7537
 Webページの方にも記載されています．  
 <span style="color: red;">**[https://www.ait.ac.jp/news/detail/0004295.html](https://www.ait.ac.jp/news/detail/0004295.html)**</span>
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/7b589f5f-2f64-4785-ae71-5f7051620051.webp" width="auto" height="400px" />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/7b589f5f-2f64-4785-ae71-5f7051620051.webp" />
 
 <div class="img-container">
     <ul class="slider">
