--- a/contents/posts/7540.html.md
+++ b/contents/posts/7540.html.md
@@ -15,16 +15,16 @@ number: 7540
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/605078bd-7355-4a16-9424-d9c3202c73d0.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/145d9172-8138-4246-bb62-498947ad43e4.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/605078bd-7355-4a16-9424-d9c3202c73d0.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/145d9172-8138-4246-bb62-498947ad43e4.webp"  /></li>
     </ul>
 </div>
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/859ee930-9479-4801-af4c-e89ede3d85c7.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/8197cb73-3e9f-447a-aa14-2dccdca04202.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d131302d-f0c2-4ab8-800d-bf92fcda40c9.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/859ee930-9479-4801-af4c-e89ede3d85c7.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/8197cb73-3e9f-447a-aa14-2dccdca04202.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d131302d-f0c2-4ab8-800d-bf92fcda40c9.webp"  /></li>
     </ul>
 </div>
 
