--- a/contents/posts/7541.html.md
+++ b/contents/posts/7541.html.md
@@ -15,5 +15,5 @@ number: 7541
 
 <span style="color: red;">[https://www.ait.ac.jp/news/detail/0003769.html](https://www.ait.ac.jp/news/detail/0003769.html)</span>
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f2cd294f-1796-47f6-a6e0-4b0a56db0009.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f2cd294f-1796-47f6-a6e0-4b0a56db0009.webp"  />
 
