--- a/contents/posts/7542.html.md
+++ b/contents/posts/7542.html.md
@@ -21,9 +21,9 @@ number: 7542
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/89e22755-00f8-4b9f-a1c2-88fc66de3500.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/47d4b3ad-36c4-40ce-8bc6-1ce322fb34b1.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/18704d28-d655-4f5c-8850-7e69e6fd0269.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/89e22755-00f8-4b9f-a1c2-88fc66de3500.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/47d4b3ad-36c4-40ce-8bc6-1ce322fb34b1.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/18704d28-d655-4f5c-8850-7e69e6fd0269.webp"  /></li>
     </ul>
 </div>
 
