--- a/contents/posts/7544.html.md
+++ b/contents/posts/7544.html.md
@@ -23,10 +23,10 @@ number: 7544
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/993cc706-a64e-4098-a185-5b5ed4268bdf.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/0035058b-d735-4387-9206-0eb19af65922.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/7d0c8df4-5069-4534-9f3c-0ede7c4294da.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/8f813c31-d3e7-4d5c-9722-8577e4625815.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/993cc706-a64e-4098-a185-5b5ed4268bdf.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/0035058b-d735-4387-9206-0eb19af65922.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/7d0c8df4-5069-4534-9f3c-0ede7c4294da.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/8f813c31-d3e7-4d5c-9722-8577e4625815.webp"  /></li>
     </ul>
 </div>
 
