--- a/contents/posts/7547.html.md
+++ b/contents/posts/7547.html.md
@@ -12,7 +12,7 @@ number: 7547
 M1の井上晴稀です．
 7月3日〜7月5日に福島県磐梯熱海温泉 華の湯にて開催されたDICOMO2019において，研究発表を行いましたので報告します．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/b7a6cc04-87b3-4bd1-9eff-64af5de2f683.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/b7a6cc04-87b3-4bd1-9eff-64af5de2f683.webp"  />
 
 ## 発表した研究
 > 井上晴稀,梶克彦,乗車中の列車の各駅到着時間を自動表示するスマートフォンアプリケーション,マルチメディア,分散.協調とモバイル(DICOMO2019)シンポジウム,3A-2,pp.506-514,2019
@@ -23,14 +23,14 @@ M1の井上晴稀です．
 このような情報は，乗り物の中にあるディスプレイでは詳しく提示されていないのが実情です．
 また，既存の乗換案内アプリケーションで目的地までの情報を得ようとすると，乗った駅や出発した時刻などの情報を入力する必要があり，手間がかかります．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f89964ac-8142-4145-af7f-ecbe67374645.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f89964ac-8142-4145-af7f-ecbe67374645.webp"  />
 
 そのため本研究では，乗客のスマートフォン端末を用いて自動的に乗っている列車を推定し，乗客に到着時間情報を提示するアプリケーションを開発および乗り物の推定手法を提案をします．
 本研究では，移動手段を一つのサービスと捉え，様々なサービスを提供するMaaS(Mobility as a Service)の考えを取り入れています．
 今回はあらゆる乗り物の中でも遅れが少ない鉄道に注目して推定手法を提案します．
 列車に乗っている乗客は，アプリケーションを開くだけで列車の情報と到着時間情報が何も操作せずに得られます．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a11860f3-f642-4dcc-9583-019c45ae9b07.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a11860f3-f642-4dcc-9583-019c45ae9b07.webp"  />
 
 先行研究では，各駅停車の列車において，スマートフォンのセンサを用いて特徴量から駅間を推定し，応用として到着時間を提示する手法を提案しています．
 しかし，この手法では通過列車が存在する快速列車や特急列車といった優等列車では駅間推定が難しくなります．
@@ -38,7 +38,7 @@ M1の井上晴稀です．
 これにより，優等列車においても到着時間情報の提供ができるようになります．
 また，本研究では複数の路線が並列走行していると判断した場合，乗客には隣接している路線の候補を提示します．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f38f8626-8e2c-4c8a-9161-6c63d2628924.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f38f8626-8e2c-4c8a-9161-6c63d2628924.webp"  />
 
 ## 発表スライド
 [DICOMO乗車中の列車の各駅到着時間を自動表示するスマートフォンアプリケーション](https://www.slideshare.net/secret/qsmZS47yxDTtyH)
@@ -50,13 +50,13 @@ M1の井上晴稀です．
 特別招待講演の直後ということで，ハードルもかなり上がった状態からの発表でしたが，先生や先輩方からの指導もあり，無事発表を終えました．
 ありがとうございました．今回の発表に関する反省点は次に活かしたいと考えています．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/11c9e6c4-9ad6-4788-95dc-95cb87640bfb.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/11c9e6c4-9ad6-4788-95dc-95cb87640bfb.webp"  />
 
 個人的には初めての東北ということで，とてもワクワクしていました．実際に郡山市内を通り抜ける磐越西線に乗った瞬間，かなり興奮しました．
 電車が２両編成（時間帯によっては４両もありましたが）でドアをボタンで開ける方式，もう完璧です．
 私の地元である豊橋には飯田線というローカル路線が走っているので，この形式は随分慣れているのですが，実際に首都圏方面から来ていた人は驚いていたようです．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d94cb8ae-51e4-41f8-8462-47805d0e776b.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d94cb8ae-51e4-41f8-8462-47805d0e776b.webp"  />
 
 車内でヨークベニマルを見た瞬間に郡山を感じました．
 実際には行きませんでしたが，また機会があれば行きたいと思います．
@@ -67,18 +67,18 @@ M1の井上晴稀です．
 「学会発表に来たからには運動しろ」というメッセージだったんでしょうか．
 一緒にいた後輩たちと一緒に会場まで歩いていきました．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/3a77acdc-eaf3-4ac8-b17a-7d62eaf58d61.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/3a77acdc-eaf3-4ac8-b17a-7d62eaf58d61.webp"  />
 
 磐梯熱海は静岡県にある温泉街”熱海”の磐梯版ということで名付けられたそうです．
 温泉街なので，あたりは旅館が非常に多く，歩いていると川の流れと共に雄大な自然あふれる街であると感じました．
 駅から２５分程度歩き，我々は会場である立派な旅館を目の当たりにしました．
 青春１８きっぷを使った旅行の宿泊先としてネットカフェを常用していた私からすると「こんなところに我々が泊まってもいいのだろうか」と驚いてしまいました．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/b4d422d7-b63b-4225-9c92-6b6dd45eae0f.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/b4d422d7-b63b-4225-9c92-6b6dd45eae0f.webp"  />
 
 会場では豪華な食事と温泉を堪能しました．
 とても楽しいひとときでした．
 詳しくは実際に宿泊してください．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/5320426d-abe2-4232-8196-6f0aee34ae3d.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/5320426d-abe2-4232-8196-6f0aee34ae3d.webp"  />
 
