--- a/contents/posts/7548.html.md
+++ b/contents/posts/7548.html.md
@@ -17,11 +17,11 @@ number: 7548
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/4592a486-c2ce-4fff-874d-c5050e41c263.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/9e7982be-5060-41ee-be85-9c072e568413.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/494a9983-b7dd-4f6f-8699-8e299b53f765.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d164f993-16db-45d7-9aaf-d47ecdb4db63.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/712d29c4-b8ac-4839-8717-120238ad9221.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/4592a486-c2ce-4fff-874d-c5050e41c263.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/9e7982be-5060-41ee-be85-9c072e568413.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/494a9983-b7dd-4f6f-8699-8e299b53f765.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d164f993-16db-45d7-9aaf-d47ecdb4db63.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/712d29c4-b8ac-4839-8717-120238ad9221.webp"  /></li>
     </ul>
 </div>
 
