--- a/contents/posts/7549.html.md
+++ b/contents/posts/7549.html.md
@@ -15,11 +15,11 @@ number: 7549
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/e6a74a66-7ba4-4444-a34b-a3ff12759bb0.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/2ba4c9af-e8ee-43ba-b81b-8b4f8b1a40fd.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/fd42b42a-1fc1-43ff-be63-8fb350362808.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/0283d7fa-9dd8-4404-bad1-595042fcdde2.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/3f68c11f-bb52-4eae-8f7b-b621cb5a30e0.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/e6a74a66-7ba4-4444-a34b-a3ff12759bb0.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/2ba4c9af-e8ee-43ba-b81b-8b4f8b1a40fd.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/fd42b42a-1fc1-43ff-be63-8fb350362808.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/0283d7fa-9dd8-4404-bad1-595042fcdde2.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/3f68c11f-bb52-4eae-8f7b-b621cb5a30e0.webp"  /></li>
     </ul>
 </div>
 
