--- a/contents/posts/7550.html.md
+++ b/contents/posts/7550.html.md
@@ -13,5 +13,5 @@ number: 7550
 その提出日前夜に英気を養うため研究室にて焼き鳥パーティーをしました！
 全部で300本もの焼き鳥をみんなで食べ，締め切りギリギリまで走りきりました．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/69653c02-b901-4c34-a2d1-623043cd62e4.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/69653c02-b901-4c34-a2d1-623043cd62e4.webp"  />
 
