--- a/contents/posts/7554.html.md
+++ b/contents/posts/7554.html.md
@@ -24,11 +24,11 @@ M2の麻生祐輝です．
 我々はこれまで，運動量取得の自動化と，競争心と貢献心を取り入れた提示システムを実装・運用を行ってきました．
 本学会では，継続的なモチベーション刺激のため，イベント管理と LINEBot を用いたイベント機能，今後の研究活動について発表を行いました．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/99d7b7a7-b957-4574-950b-ad118cfa05e9.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/99d7b7a7-b957-4574-950b-ad118cfa05e9.webp"  />
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/660762f9-d47d-4f1d-a1b3-72ebff0e5283.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/660762f9-d47d-4f1d-a1b3-72ebff0e5283.webp"  />
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/190442a2-473c-4590-b3f3-b27521ef07da.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/190442a2-473c-4590-b3f3-b27521ef07da.webp"  />
 
 ## 感想
 発表内容は実装メインでしたが，質疑応答ではオフィスワーカーとグループの組み合わせの可能性についていくつか意見を頂き有意義な参加となりました．
