--- a/contents/posts/7556.html.md
+++ b/contents/posts/7556.html.md
@@ -30,8 +30,8 @@ FA機器の長時間動作のためには，異常を事前に知らせること
 本研究では，FA機器間の相互作用のモデル化を行い，異常検知や保守管理，製品クオリティの向上といった，より高精度な制御を行うFAシステムの構築を最終目標とする．
 最終目標までの第一段階として，本稿では相互作用のセンシング方法とモデル化手法の提案を行う．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/70c25842-9405-440a-b462-b9077ea6a6e5.webp" loading='lazy' />
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a7e2d2f4-4c0f-4410-b501-c8e87eea83ce.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/70c25842-9405-440a-b462-b9077ea6a6e5.webp"  />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a7e2d2f4-4c0f-4410-b501-c8e87eea83ce.webp"  />
 
 ## 感想
 コロナが原因で現地開催が中止となり初のオンライン開催ということで貴重な経験ができました．
