--- a/contents/posts/7563.html.md
+++ b/contents/posts/7563.html.md
@@ -15,8 +15,8 @@ number: 7563
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a3fcc382-87ef-4864-9092-63aaf4f36198.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f7b85e8e-7de9-4f32-87be-0b414cb7fa94.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a3fcc382-87ef-4864-9092-63aaf4f36198.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f7b85e8e-7de9-4f32-87be-0b414cb7fa94.webp"  /></li>
     </ul>
 </div>
 
