--- a/contents/posts/7570.html.md
+++ b/contents/posts/7570.html.md
@@ -21,7 +21,7 @@ M1の岩月佑介です．
 また来訪促進に付随してコミュニケーションの促進を行いたいと考える．
 来訪促進を行うアプローチとしてある人が部屋に滞在した履歴を使用し，滞在時間に応じてペットの育成が可能なゲームをゲーミフィケーションの考えに基づいて開発する．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/e7130d4c-4009-4855-ae70-3bc1490b6d85.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/e7130d4c-4009-4855-ae70-3bc1490b6d85.webp"  />
 
 ## 感想
 初めての学会発表がオンラインでの発表でしたが自分的にはうまく発表できたのかなと思いました．
