--- a/contents/posts/7571.html.md
+++ b/contents/posts/7571.html.md
@@ -29,7 +29,7 @@ B4の土本です．
 これにより協力者の物理的負担を軽減する．
 心理的負担と物理的負担の軽減により，センシング協力継続を推進する．
   
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/fc813734-3ec4-4b49-8ec9-7c99c74f0ddc.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/fc813734-3ec4-4b49-8ec9-7c99c74f0ddc.webp"  />
 
 ## 感想
 研究発表・リモートでの発表ともに2回目でした．
