--- a/contents/posts/7573.html.md
+++ b/contents/posts/7573.html.md
@@ -21,7 +21,7 @@ B4の宮澤です．
 本アプリでは，スマートフォンに搭載されている気圧センサのデータから活動量推定を行う．
 アプリの仕組みは，取得した気圧センサのデータにローパスフィルタにかけることで歩行成分と高さ成分に分けて，歩行成分から歩数，高さ成分から高さ遷移を取得し，階段部分の判定を行い，平地部分と階段部分の活動量を分けて推定する．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/c14f6bf7-c974-4878-9a6b-56d3c35099a8.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/c14f6bf7-c974-4878-9a6b-56d3c35099a8.webp"  />
 
 ## 感想
 コンテストに投稿して，実際に自分が作った物を誰かに評価していただくのは，初めての経験でした．
