--- a/contents/posts/7579.html.md
+++ b/contents/posts/7579.html.md
@@ -14,8 +14,8 @@ number: 7579
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/4e2ae923-c1cf-4280-99f7-2f80c8d4d3ff.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f393603d-0d6b-42b0-9d5e-c64efdc1609c.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/4e2ae923-c1cf-4280-99f7-2f80c8d4d3ff.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f393603d-0d6b-42b0-9d5e-c64efdc1609c.webp"  /></li>
     </ul>
 </div>
 
