--- a/contents/posts/7589.html.md
+++ b/contents/posts/7589.html.md
@@ -13,14 +13,14 @@ number: 7589
 計4名が修士2年間の研究成果を発表しました．
 
 <p style="text-align:center; font-weight:bold; font-size:1.17em;">BLEビーコンを用いた在室管理プラットフォームと<br>それに基づく在室状況提示システムに関する研究</p>
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/9b34fafa-bdbf-48b0-abf1-3a028eb5a12d.webp" loading='lazy' /><br>
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/9b34fafa-bdbf-48b0-abf1-3a028eb5a12d.webp"  /><br>
 
 <p style="text-align:center; font-weight:bold; font-size:1.17em;">卓球のラケットとスマートフォンの融合による<br>エンタメアプリケーションに関する研究</p>
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/900aa39c-ec2c-4966-8778-567ba328ae9e.webp" loading='lazy' /><br>
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/900aa39c-ec2c-4966-8778-567ba328ae9e.webp"  /><br>
 
 <p style="text-align:center; font-weight:bold; font-size:1.17em;">FA機器間の相互作用モデルを用いた異常検知に関する研究</p>
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f9ea6de4-7b08-4ea0-9ad5-d87f73fee363.webp" loading='lazy' /><br>
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f9ea6de4-7b08-4ea0-9ad5-d87f73fee363.webp"  /><br>
 
 <p style="text-align:center; font-weight:bold; font-size:1.17em;">聴衆の注目率をプレゼンテーション環境に<br>直接フィードバックするシステムに関する研究</p>
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/79aba394-2636-4660-b8bf-16d726dd3374.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/79aba394-2636-4660-b8bf-16d726dd3374.webp"  />
 
