--- a/contents/posts/7595.html.md
+++ b/contents/posts/7595.html.md
@@ -18,8 +18,8 @@ number: 7595
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/aaa90baa-8695-4d47-9e5b-69a96fe60850.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/23acd3cf-ce37-4d92-8ee5-479fb9b82dd9.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/aaa90baa-8695-4d47-9e5b-69a96fe60850.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/23acd3cf-ce37-4d92-8ee5-479fb9b82dd9.webp"  /></li>
     </ul>
 </div>
 
