--- a/contents/posts/7601.html.md
+++ b/contents/posts/7601.html.md
@@ -12,7 +12,7 @@ number: 7601
 
 この度，[第10回学生スマートフォンアプリコンテスト](http://contest2022.sig-cds.net/)に参加し，**<span style="color:red;">最優秀賞</span>と<span style="color:red;">NTTテクノクロス様の企業賞</span>を受賞しました**．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/c44d87a6-821b-4c08-b8c5-be139325c126.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/c44d87a6-821b-4c08-b8c5-be139325c126.webp"  />
 
 
 ## 作成したアプリの概要
@@ -22,14 +22,14 @@ number: 7601
 捕まえた魚はSNS連携によりtwitter等で共有できます．
 本アプリはGoogleStoreから<a href="https://play.google.com/store/apps/details?id=b22712.SinkItGrabIt&hl=ja" target="_blank" rel="noopener noreferrer">ダウンロード</a>できます．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f55fe168-3809-40b8-9ec3-f77f6f226071.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f55fe168-3809-40b8-9ec3-f77f6f226071.webp"  />
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/fb7200a6-90a4-4a29-8b9b-c67a81fe6456.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f7587162-b9dd-4eb0-9265-aa788a75c170.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/4e31b222-21c6-43d7-90c9-b61eba632ed7.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/635f12b8-18fd-4e27-8c44-b84a908431dd.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/fb7200a6-90a4-4a29-8b9b-c67a81fe6456.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f7587162-b9dd-4eb0-9265-aa788a75c170.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/4e31b222-21c6-43d7-90c9-b61eba632ed7.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/635f12b8-18fd-4e27-8c44-b84a908431dd.webp"  /></li>
     </ul>
 </div>
 
