--- a/contents/posts/7602.html.md
+++ b/contents/posts/7602.html.md
@@ -13,7 +13,7 @@ number: 7602
 数年ぶりに研究室として正式にクリスマス会兼忘年会を開催しました！！  
 (下の画像は先生がサンタのコスチュームを着てくれているので中々レアです)
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/aaa90baa-8695-4d47-9e5b-69a96fe60850.webp" loading='lazy' /><br>
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/aaa90baa-8695-4d47-9e5b-69a96fe60850.webp"  /><br>
 
 ## クリスマス会について
 今回のクリスマス会ではコストコでピザやケーキ，ジュースを購入し，みんなで食べました．
@@ -24,8 +24,8 @@ number: 7602
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/23acd3cf-ce37-4d92-8ee5-479fb9b82dd9.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a8cd0b39-24c8-4d04-9ea9-4928e6a59697.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/23acd3cf-ce37-4d92-8ee5-479fb9b82dd9.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a8cd0b39-24c8-4d04-9ea9-4928e6a59697.webp"  /></li>
     </ul>
 </div><br>
 
@@ -35,5 +35,5 @@ number: 7602
 コオロギは見た目がほぼゴ○ブリなので，食べるのはとても嫌でしたが味は意外と普通でした．
 皆さんも機会があれば是非！(僕はもう食べたくないですが...)
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ebeb7005-ddd9-4c3f-86b0-c9d43204474c.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ebeb7005-ddd9-4c3f-86b0-c9d43204474c.webp"  />
 
