--- a/contents/posts/7603.html.md
+++ b/contents/posts/7603.html.md
@@ -25,7 +25,7 @@ number: 7603
 基礎検討として切る工程で分析と比較を行った．
 特徴量の比較結果から被験者のモチベーションの増加が期待される．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/044b65e0-a82c-44c1-a8cf-14dc912baea5.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/044b65e0-a82c-44c1-a8cf-14dc912baea5.webp"  />
 
 ### 感想
 はい，M1の熊澤綾人です．
@@ -36,7 +36,7 @@ number: 7603
 発表に関しては，悪くなく行けたので安心しています．<br>
 今回のが今後の発表に繋がればいいなと思ってます．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/72eb18be-46d6-469a-b3c4-03b125847fc7.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/72eb18be-46d6-469a-b3c4-03b125847fc7.webp"  />
 
 
 ## 大橋世弥:物の共起関係に着目した置き忘れ防止システム
@@ -48,7 +48,7 @@ number: 7603
 結果として時間と行動の関連が強い場合にある程度正確に通知ができた．
 一方電波強度に依存した場所推定をしているため環境によって誤検知が起きて精度が下がってしまう点が課題の一つである．
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d0de3a49-c47f-4c64-b868-5361037fa38f.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d0de3a49-c47f-4c64-b868-5361037fa38f.webp"  />
 
 ### 感想
 B4の大橋です．<br>
@@ -57,8 +57,8 @@ B4の大橋です．<br>
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/573d3b3d-2084-43c1-a45e-23738f8d83eb.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/80b7c493-7ddd-4684-9b9c-01c3090663e5.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/573d3b3d-2084-43c1-a45e-23738f8d83eb.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/80b7c493-7ddd-4684-9b9c-01c3090663e5.webp"  /></li>
     </ul>
 </div>
 
@@ -72,7 +72,7 @@ B4の大橋です．<br>
 本研究の目的はスマートウォッチを用いてダーツ未経験者のサポートをすることである.
 投げる動作をテイクバックとフォロースルーの二つに分け、加速度センサーと角速度センサーを用いて手振れや速度などのデータを経験者のデータと比較し、基本的な検討を行う.
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f9e10137-10cf-4d54-9102-72c1f9c0e3b7.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f9e10137-10cf-4d54-9102-72c1f9c0e3b7.webp"  />
 
 ### 感想
 B4の丸山です．<br>
@@ -88,7 +88,7 @@ B4の丸山です．<br>
 心拍数はスマートウォッチを使いより気軽にデータを収集することができる.
 データを共有し心拍数の変化が起きている部分でエフェクトを加え更なる迫力や、過激なシーンを見辛くしホラーが怖い人でも見やすくなるようにしたりとコンテンツのさまざまな楽しみ方が期待される.
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/c7b4227d-3f24-4231-bc19-c26ff223e7ee.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/c7b4227d-3f24-4231-bc19-c26ff223e7ee.webp"  />
 
 ### 感想
 B4の鵜飼です．<br>
