--- a/contents/posts/7605.html.md
+++ b/contents/posts/7605.html.md
@@ -12,7 +12,7 @@ number: 7605
 毎年恒例の卒論・修論の時期が今年もやってきました！  
 締め切り間近に色々な事件があり少しヒヤヒヤする場面もありましたが，最後には何とか全員無事に提出することができました！！
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/3e229f2c-f85c-49ec-9424-8d2427cb7a4a.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/3e229f2c-f85c-49ec-9424-8d2427cb7a4a.webp"  />
 
 ## 発生した事件
 ### 事件1：修論締め切り1週間前のコロナウイルス感染事件
