--- a/contents/posts/7612.html.md
+++ b/contents/posts/7612.html.md
@@ -14,5 +14,5 @@ number: 7612
 メンバーは[member](https://kajilab.net/hpg/member/)にて．
 今後の活躍に期待ですね！！！！
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/812c48dc-b28e-4ba6-9a01-fe696b10e54e.webp" loading='lazy' /><br>
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/812c48dc-b28e-4ba6-9a01-fe696b10e54e.webp"  /><br>
 
