--- a/contents/posts/7620.html.md
+++ b/contents/posts/7620.html.md
@@ -11,7 +11,7 @@ number: 7620
 
 8月26日、ハッカソンイベント[Open Hack U 2023 NAGOYA](https://hacku.yahoo.co.jp/hacku2023_nagoya/)に参加し、**<span style="color:red;">最優秀賞</span>を受賞しました！**
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/310a1e92-4b15-4afd-9448-170886443f58.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/310a1e92-4b15-4afd-9448-170886443f58.webp"  />
 
 ## 概要
 　8月26日に名古屋駅のセントラルタワーで開催されたLINEヤフー主催のハッカソンイベント[Open Hack U 2023 NAGOYA](https://hacku.yahoo.co.jp/hacku2023_nagoya/)に出場し、23チーム計80人以上が参加する中で最優秀賞を受賞しました。  
@@ -25,7 +25,7 @@ number: 7620
 
 発表の様子は[YouTube](https://www.youtube.com/watch?v=uI0KZHE8qAg&t=2520s)で視聴できます。
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/98f559e5-eedb-40c0-ae31-901ebb3c9a20.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/98f559e5-eedb-40c0-ae31-901ebb3c9a20.webp"  />
 
 ## 感想
 ### 水谷
