--- a/contents/posts/7621.html.md
+++ b/contents/posts/7621.html.md
@@ -24,7 +24,7 @@ The contribution of this research is twofold.
 The first is a proposal for a framework for a system that allows compare cooking ability and efficiency with past selves and others.
 The second is the actual sensing of cooking behavior and providing concrete examples of analysis and comparison with respect to transitions in behavior and place.
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/0ce6fc5a-59bc-4a81-b756-75d69e92b074.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/0ce6fc5a-59bc-4a81-b756-75d69e92b074.webp"  />
 
 ### 報告と感想
 どうも，M2の熊澤です.  
@@ -36,16 +36,16 @@ The second is the actual sensing of cooking behavior and providing concrete exam
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/3ce6b5b7-267b-4077-b211-2ae3dda09555.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/4ae61f35-c65b-4dd3-bf41-8d7d483eb8ef.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a354bff7-e467-4d1f-b00b-77a30f9e8156.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d4a47c7e-aeac-48bb-bf2a-9486c3205da7.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/3ce6b5b7-267b-4077-b211-2ae3dda09555.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/4ae61f35-c65b-4dd3-bf41-8d7d483eb8ef.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/a354bff7-e467-4d1f-b00b-77a30f9e8156.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d4a47c7e-aeac-48bb-bf2a-9486c3205da7.webp"  /></li>
     </ul>
 </div>
 
 これは大沼公園駅周辺で頼んだシマエナガのダルゴナラテ  
 かわいいですね＾＾
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f68f0a0b-b6bb-4228-ad66-ff614cad0411.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f68f0a0b-b6bb-4228-ad66-ff614cad0411.webp"  />
 
 
 
@@ -58,19 +58,19 @@ The acceleration in the direction perpendicular to the ground is acquired with a
 Experiments were conducted to classify whether or not air inflation is necessary, to estimate the air pressure value and classify it based on that value, and to evaluate whether the training data from other locations and bicycles can be diverted.
 The results of the evaluation experiments showed that 96.1% correctly classified when inflation was required, but it was difficult to reuse the training data.
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/dd8fe5ba-212b-4fad-bd19-7db7ad2963fb.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/dd8fe5ba-212b-4fad-bd19-7db7ad2963fb.webp"  />
 
 ### 報告と感想
 初めての英語発表で初めて賞を受賞でき、とても嬉しく思います。まだ多くの研究課題が残っているので、課題を解決し、多くの人が使えるアプリケーションにしていきたいです。
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f3d77668-7f61-4fc6-9aae-8c4b488428fa.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f3d77668-7f61-4fc6-9aae-8c4b488428fa.webp"  />
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/7023a0c9-9315-4c71-bc95-ccf243ac349e.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/eedbfd6b-40b6-4695-b961-2485cc21cca5.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f8f8b77b-da9b-4482-8d8d-a88068eb83c6.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/069b5cbb-3c61-4f0b-808e-5c6f0036f5a4.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/7023a0c9-9315-4c71-bc95-ccf243ac349e.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/eedbfd6b-40b6-4695-b961-2485cc21cca5.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f8f8b77b-da9b-4482-8d8d-a88068eb83c6.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/069b5cbb-3c61-4f0b-808e-5c6f0036f5a4.webp"  /></li>
     </ul>
 </div>
 
@@ -78,8 +78,8 @@ The results of the evaluation experiments showed that 96.1% correctly classified
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/66ade473-3aab-4a25-8540-7dd92c54899b.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/5ca46765-8064-440a-a21a-86fb841566af.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/66ade473-3aab-4a25-8540-7dd92c54899b.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/5ca46765-8064-440a-a21a-86fb841566af.webp"  /></li>
     </ul>
 </div>
 
