--- a/contents/posts/7634.html.md
+++ b/contents/posts/7634.html.md
@@ -9,7 +9,7 @@ number: 7634
 ---
 
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ef7b698f-367f-4899-a64e-7758906279a7.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ef7b698f-367f-4899-a64e-7758906279a7.webp"  />
 
 
 <a href="http://www.infsoc.org/conference/iwin2024/">IWIN2024</a>にて戸川さんと加藤さんの2名が発表してきました．  
@@ -27,7 +27,7 @@ We implemented an application that automatically sets the content of physical be
 In evaluation experiments, the application was found to have high tracking performance and low battery consumption.
 
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/1b236aa5-3c13-4a27-a31d-775362efed66.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/1b236aa5-3c13-4a27-a31d-775362efed66.webp"  />
 
 ### 報告と感想
 M1の戸川浩汰です。
@@ -37,13 +37,13 @@ M1の戸川浩汰です。
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/180224b5-5c7d-432b-b646-4121fde3bf21.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d4794259-c69f-4d1c-8e5e-eabef0817b2c.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/180224b5-5c7d-432b-b646-4121fde3bf21.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d4794259-c69f-4d1c-8e5e-eabef0817b2c.webp"  /></li>
     </ul>
 </div>
 
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/244e95a8-b349-40da-b545-7dfd7f0151f4.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/244e95a8-b349-40da-b545-7dfd7f0151f4.webp"  />
 
 
 ## 加藤「A Study of Web System for Comparison and Analysis of Cooking Actions Based on Activity Sensing」
@@ -51,7 +51,7 @@ M1の戸川浩汰です。
 There are various methods for sharing cooking recipes. Consequently, systems that allow users to share their impressions of the outcome and taste through photos and text have become widespread. However, there is no mechanism for comparing cooking actions with others or with one’s past self.
 This study aims to realize a system that allows users to share and compare cooking actions, enabling self-analysis and reflection through the visualization of actions during cooking. We extracted features related to stationary actions and movements between fixed points. For station aryactions, specifically cucumber slicing, we obtained the average pace, average acceleration, and the standard deviation of acceleration. For movements between fixed points, focusing on hamburger steak preparation, we extracted features such as dwell time and location transitions. We investigated whether self-analysis could be conducted and whether there were any changes in cooking skills through the comparison of cooking actions using graph displays. As a result, while the graphical display prompted self-analysis and led to a change in awareness, no growth trend was observed with a displaying only once.
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/6db74aca-cb26-47b3-84f1-8db09d3c9299.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/6db74aca-cb26-47b3-84f1-8db09d3c9299.webp"  />
 
 ### 報告と感想
 M1の加藤風真です．今回の発表は初めての英語発表でした．
@@ -61,8 +61,8 @@ M1の加藤風真です．今回の発表は初めての英語発表でした．
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/3459e68d-1b4b-4e6f-85a9-5f88912dbfef.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/553e2f69-26db-4781-bb95-df4c263f4436.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/3459e68d-1b4b-4e6f-85a9-5f88912dbfef.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/553e2f69-26db-4781-bb95-df4c263f4436.webp"  /></li>
     </ul>
 </div>
 
