--- a/contents/posts/7639.html.md
+++ b/contents/posts/7639.html.md
@@ -18,7 +18,7 @@ number: 7639
 屋内位置情報サービスの重要性が増している．様々な屋内測位技術が提案されているが、普及していない．複数組織が混在する建物内での位置情報提供は，機密情報保護の課題から困難である．そこで，本研究では，各組織が独自に運用する滞在管理システムを連携させ，機密情報を保護しつつ屋内位置情報を提供するシステムを提案した．
 各組織の滞在管理システム間で在室確信度を共有し，照会サーバを介してユーザの位置を推定する．各組織は自組織の機密情報を開示せずに匿名化されたデータのみを共有でき，機密性を保護しながら位置推定が可能である
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/15d72856-98ca-4af9-ad0e-6273138b52e5.webp" loading='lazy'/>
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/15d72856-98ca-4af9-ad0e-6273138b52e5.webp" />
 
 ### 感想
 研究含めて，色々課題が見えてきた発表でした．今後に繋げたいと思います
@@ -33,7 +33,7 @@ number: 7639
 卓球ラケットとスマートフォンの加速度センサを用いたヒット判定を用いて現在時刻を取得し，判定タイミングで取得する現在時刻との差でリズムゲームの判定を行うアプリケーションを作成し，複数人に体験してもらった.
 結果としてエンタメ性の拡張，技術力の向上には繋がったが，判定のフィードバック方法に改善の余地が見られた.
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/775caf54-e0de-4f0b-bb58-173ee994c523.webp" loading='lazy'/>
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/775caf54-e0de-4f0b-bb58-173ee994c523.webp" />
 
 ### 感想
 自分の制作物を発表する貴重な機会だったので緊張しましたが無事に終えられて良かったです.
@@ -50,7 +50,7 @@ number: 7639
 アプローチとして,センサデータ蓄積にその分析結果の一つである歩行軌跡を蓄積するモバイルクラウドセンシングシステムを開発した.
 評価実験を実施した環境で推定された軌跡は一つの座標が誤差3~5m程度の誤差で蓄積された.実験結果より歩行軌跡の蓄積は行えていると評価した.
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/090c1fcc-117a-4bee-a21a-c9db3df9dcb6.webp" loading='lazy'/>
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/090c1fcc-117a-4bee-a21a-c9db3df9dcb6.webp" />
 
 ### 感想
 自分の研究室以外の方の研究を聞くことで知らない分野に興味を持つきっかけとなったのでとても有意義な経験になりました
@@ -66,7 +66,7 @@ number: 7639
 実験として刺身を切る動作を取得し切った回数・切るペース・刃の角度の特徴量抽出を行った.
 結果より,切った回数から刺身の厚さ,切るペースから手際の良さ,刃の角度から平造りなどの切り方の評価に使用できると知見を得た.
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/4a8dba4b-5973-4e41-98e6-0d20556ad29e.webp" loading='lazy'/>
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/4a8dba4b-5973-4e41-98e6-0d20556ad29e.webp" />
 
 ### 感想
 学会発表初参加でした.学外の人たちの発表を聞くことはあまりないのでいい機会でした.
