--- a/contents/posts/7640.html.md
+++ b/contents/posts/7640.html.md
@@ -11,5 +11,5 @@ number: 7640
 ## 研究室おでかけ in 名古屋港水族館
  11/13（水）に名古屋港水族館に行きました！
 
- <img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/89ed4875-85d3-4289-bac4-544f6f2566eb.webp" loading='lazy' />
+ <img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/89ed4875-85d3-4289-bac4-544f6f2566eb.webp"  />
 
