--- a/contents/posts/7641.html.md
+++ b/contents/posts/7641.html.md
@@ -11,13 +11,13 @@ number: 7641
 
 B1のmachidaが11/17にアマゾン・ウェブ・サービス・ジャパン合同会社で最終審査会が行われた「U-22 プログラミング・コンテスト2024」で,経済産業省商務情報政策局長賞＜テクノロジー＞と,さくらインターネット賞の2つの賞を受賞しました.
 
- <img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/7d165975-11a3-420a-a32d-2812c99d872a.webp" loading='lazy' />
+ <img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/7d165975-11a3-420a-a32d-2812c99d872a.webp"  />
 
 ## LicenSeed - 新しいライセンス付与と管理のカタチ
 ### 概要
 LicenSeed は,クリエイターの制作物に対するライセンスの付与と,ユーザーのライセンスの確認ができるツールです.ユーザーの約8割が著作権について正確に知っているという自信がなく,クリエイターの約4割が自身の制作物に対して著作権意思表示していないという文化庁の調査に着目し,ユーザーが制作物のライセンスを理解し,従いやすくする仕組みをつくることを目標に制作しました。許諾範囲の簡易一覧の表示や,子素材のライセンスの継承ができます.
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ec90ef48-4fd3-4eab-a7cf-7aeffdd09480.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ec90ef48-4fd3-4eab-a7cf-7aeffdd09480.webp"  />
 
 
 
