--- a/contents/posts/7646.html.md
+++ b/contents/posts/7646.html.md
@@ -15,8 +15,8 @@ number: 7646
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/707c1aa1-4f8d-4989-8f77-6f21f4670f76.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/e74bcf90-8480-447e-8c79-9c232b25db9e.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/707c1aa1-4f8d-4989-8f77-6f21f4670f76.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/e74bcf90-8480-447e-8c79-9c232b25db9e.webp"  /></li>
     </ul>
 </div>
 
@@ -32,8 +32,8 @@ B2の時点で自分の研究について学外の方々に向けて発表を行
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/bf8e727c-15e7-4a6e-af35-0f2cf8e43e3c.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ee9de4ff-ce2f-44b7-afed-36c401cd09f8.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/bf8e727c-15e7-4a6e-af35-0f2cf8e43e3c.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/ee9de4ff-ce2f-44b7-afed-36c401cd09f8.webp"  /></li>
     </ul>
 </div>
 
@@ -49,8 +49,8 @@ B2の時点で自分の研究について学外の方々に向けて発表を行
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/edbb6738-96dc-4d0a-bc75-7b82476f4071.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/75e084d1-fe73-4033-8f1f-7cb11e5d694d.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/edbb6738-96dc-4d0a-bc75-7b82476f4071.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/75e084d1-fe73-4033-8f1f-7cb11e5d694d.webp"  /></li>
     </ul>
 </div>
 
@@ -67,8 +67,8 @@ M1の戸川浩汰です。今回は修士課程から取り組んでいる研究
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/58a1f5e4-f7af-44dd-a9e9-ddf5a94a92d3.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/6dafad81-e6b0-4842-8fad-2a008658b00d.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/58a1f5e4-f7af-44dd-a9e9-ddf5a94a92d3.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/6dafad81-e6b0-4842-8fad-2a008658b00d.webp"  /></li>
     </ul>
 </div>
 
