--- a/contents/posts/7480.html.md
+++ b/contents/posts/7480.html.md
@@ -25,8 +25,8 @@ number: 7480
 
 <div class="img-container">
     <ul class="slider">
-        <li><a href="/hpg/img/2016/09/2016-08-24-16.19.38.jpg" data-lightbox="2016-09-09"><img src="/hpg/img/thumbnail/2016/09/2016-08-24-16.19.38.jpg" loading='lazy' /></a></li>
-        <li><a href="/hpg/img/2016/09/2016-08-24-14.53.40.jpg" data-lightbox="2016-09-09"><img src="/hpg/img/thumbnail/2016/09/2016-08-24-14.53.40.jpg" loading='lazy' /></a></li>
-        <li><a href="/hpg/img/2016/09/2016-08-24-14.35.34.jpg" data-lightbox="2016-09-09"><img src="/hpg/img/thumbnail/2016/09/2016-08-24-14.35.34.jpg" loading='lazy' /></a></li>
+        <li><a href="/hpg/img/2016/09/2016-08-24-16.19.38.jpg" data-lightbox="2016-09-09"><img src="/hpg/img/thumbnail/2016/09/2016-08-24-16.19.38.jpg"  /></a></li>
+        <li><a href="/hpg/img/2016/09/2016-08-24-14.53.40.jpg" data-lightbox="2016-09-09"><img src="/hpg/img/thumbnail/2016/09/2016-08-24-14.53.40.jpg"  /></a></li>
+        <li><a href="/hpg/img/2016/09/2016-08-24-14.35.34.jpg" data-lightbox="2016-09-09"><img src="/hpg/img/thumbnail/2016/09/2016-08-24-14.35.34.jpg"  /></a></li>
     </ul>
 </div>
