--- a/contents/posts/7503.html.md
+++ b/contents/posts/7503.html.md
@@ -16,12 +16,12 @@ number: 7503
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/8cc98525-75da-4e28-932e-9b5c271f5213.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/b0e1e83c-5fde-4eae-bcf0-979005179cc3.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f89890a0-4dea-4a26-9a4a-998f784ff409.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d186dc41-eab8-44e6-8ac2-51bcd5a68592.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/cf4ce6f4-0a86-44d5-b8be-faef282c35e3.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f5705a73-dd86-4f79-8340-8512ac81b560.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/8cc98525-75da-4e28-932e-9b5c271f5213.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/b0e1e83c-5fde-4eae-bcf0-979005179cc3.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f89890a0-4dea-4a26-9a4a-998f784ff409.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/d186dc41-eab8-44e6-8ac2-51bcd5a68592.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/cf4ce6f4-0a86-44d5-b8be-faef282c35e3.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/f5705a73-dd86-4f79-8340-8512ac81b560.webp"  /></li>
     </ul>
 </div>
 
