--- a/contents/posts/7523.html.md
+++ b/contents/posts/7523.html.md
@@ -20,8 +20,8 @@ number: 7523
 
 <div class="img-container">
     <ul class="slider">
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/8df9e77c-0654-4f13-81ae-d31301689d18.webp" loading='lazy' /></li>
-        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/c5085d8e-b782-4bdf-a5fc-98c64f924454.webp" loading='lazy' /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/8df9e77c-0654-4f13-81ae-d31301689d18.webp"  /></li>
+        <li><img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/c5085d8e-b782-4bdf-a5fc-98c64f924454.webp"  /></li>
     </ul>
 </div>
 
