--- a/contents/posts/7636.html.md
+++ b/contents/posts/7636.html.md
@@ -11,7 +11,7 @@ number: 7636
 
 8月31日、ハッカソンイベント[Open Hack U 2024 TOKYO vol.2](https://hacku.yahoo.co.jp/hacku2024_tokyo2/)に参加し、**<span style="color:red;">優秀賞</span>を受賞しました！**
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/c2fbaec8-6d94-43e3-9ed6-255536c5dd7e.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/c2fbaec8-6d94-43e3-9ed6-255536c5dd7e.webp"  />
 
 ## 概要
 　8月31日に開催されたLINEヤフー主催のハッカソンイベント[Open Hack U 2024 TOKYO vol.2](https://hacku.yahoo.co.jp/hacku2024_tokyo2/)に出場し、計30チームが参加する中で優秀賞を受賞しました。  
@@ -23,7 +23,7 @@ number: 7636
 
 発表の様子は[YouTube](https://youtu.be/inhe31cKfro?t=5032)で視聴できます。
 
-<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/373c7cab-2b57-4933-8f62-c7223269aa0e.webp" loading='lazy' />
+<img src="https://img.esa.io/uploads/production/attachments/13979/2025/04/06/148142/373c7cab-2b57-4933-8f62-c7223269aa0e.webp"  />
 
 
 ## 感想
